--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,13 @@
   
   <div class="container mx-auto">
     
-    <div class="mx-w-full bg-indigo-600">
-      <h1 class="text-2xl font-bold text-center text-pink-200 py-4">Book Review Card Generator</h1>
+    <div class="mx-auto w-auto">
+      <h1 class="text-2xl underline font-bold font-serif text-center text-blue-800 pt-4 mb-8">Book Review Card Generator</h1>
     </div>
 
-    <div class="flex mb-4" x-data="card()">
+    <div class="w-full lg:flex mb-4" x-data="card()">
 
-      <div class="w-1/2 p-2">
+      <div class="w-full lg:w-1/2 p-2">
         <form @submit.prevent="newCard()">
           <div>
             <label class="block">
@@ -78,7 +78,7 @@
             <span>Rating</span>
 
             <select
-              class="form-select mt-1 block material-icons text-yellow-500"
+              class="form-select mt-1 block material-icons text-red-500"
               x-model="rating">
               <template x-for="(star, index) in stars" :key="index">
                 <option x-text="star" :value="index"></option>
@@ -115,7 +115,7 @@
         </form>
       </div>
 
-      <div class="w-1/2 p-2">
+      <div class="w-full lg:w-1/2 p-2">
         <canvas id="cardCanvas" width="540px" height="540px">
         </canvas>
       </div>
