fixed med screen breaking point

--- a/public/index.html
+++ b/public/index.html
@@ -88,12 +88,12 @@
           <div class="flex">
             <label class="w-1/2">
               <span>Start Date</span>
-              <input class="form-input mt-1 block w-full" type="text" id="startDate" x-model="startDate" @change="newCard()">
+              <input class="form-input mt-1 block w-full" type="text" id="startDate" x-model="startDate">
             </label>
 
             <label class="w-1/2">
               <span>End Date</span>
-              <input class="form-input mt-1 block w-full" type="text" id="endDate" x-model="endDate" @change="newCard()">
+              <input class="form-input mt-1 block w-full" type="text" id="endDate" x-model="endDate">
             </label>
           </div>
 
